TEST_PROGRAMS/INVALID/Terrence_Ko/doublesum.min
var n: int ;

n = (2+3)++ 4;
